clean arch
